--- a/styles.css
+++ b/styles.css
@@ -40,16 +40,19 @@ header{
     align-items: center;
     color: var(--Very-Dark-Blue);
     h1{
+        animation: leftToInit 1s ease 0s 1;
         text-align: center;
         font-weight: 200;
     }
     h2{
+        animation: rightToInit 1s ease 0s 1;
         text-align: center;
         font-weight: 500;
         font-size: 2rem;
     }
     p{
         width: 60%;
+        animation: leftToInit 1s ease 0s 1;
         text-align: center;
     }
 }
@@ -64,6 +67,8 @@ header{
         grid-template-columns: 1fr 1fr 1fr;
         gap: 1rem;
         article{
+            opacity: 0;
+            animation: leftToInit 1s ease 0s 1 forwards;
             border-radius: 5px;
             box-shadow: 0px 0px 2px;
             padding: 1.5rem;
@@ -86,22 +91,26 @@ header{
             }
         }
         .supervisor{
+            animation-delay: 0s;
             border-top: 5px solid var(--Cyan);
             grid-area: supervisor;
             height: 50%;
             align-self: center;
         }
         .calculator{
+            animation-delay: 0.5s;
             grid-area: calculator;
             height: 50%;
             align-self: center;
             border-top: 5px solid var(--Blue);
         }
         .karma{
+            animation-delay: 0.25s;
             border-top: 5px solid var(--Orange);
             grid-area: karma;
         }
         .teamBuilder{
+            animation-delay: 0.25s;
             border-top: 5px solid var(--Red);
             grid-area: teambuilder;          
         }
@@ -124,5 +133,27 @@ header{
     }
     p{
         font-size: 1rem;
+    }
+}
+
+@keyframes leftToInit {
+    from{
+        opacity: 0;
+        translate: 50vw 0px;
+    }
+    to{
+        opacity: 1;
+        translate: 0px 0px;
+    }
+}
+
+@keyframes rightToInit {
+    from{
+        opacity: 0;
+        translate: -50vw 0px;
+    }
+    to{
+        opacity: 1;
+        translate: 0vw 0px;
     }
 }
